--- a/BBBAppointmentModule/module.css
+++ b/BBBAppointmentModule/module.css
@@ -1,268 +1,125 @@
-body {
-    background-color: black;
+/* UI SKELETON */
+
+#grid-container {
+    display: inline-grid;
+    grid-template-columns: 200px 300px 100px;
+    column-gap: 20px;
 }
 
-h1 {
-    color: fuchsia;
+#footer-container {
+    background-color: #D6B1A1;
 }
 
-:root {
-    --dark-body: #4d4c5a;
-    --dark-main: #141529;
-    --dark-second: #79788c;
-    --dark-hover: #323048;
-    --dark-text: #f8fbff;
-    --light-body: #f3f8fe;
-    --light-main: #fdfdfd;
-    --light-second: #c3c2c8;
-    --light-hover: #edf0f5;
-    --light-text: #151426;
-    --blue: #007497;
-    --white: #fff;
-    --shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    --font-family: cursive;
+#personal-inner {
+    margin: 10px;
 }
 
-.light {
-    --bg-body: var(--light-body);
-    --bg-main: var(--light-main);
-    --bg-second: var(--light-second);
-    --color-hover: var(--light-hover);
-    --color-txt: var(--light-text);
-}
-
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-html,
-body {
-    height: 100vh;
-    display: grid;
-    place-items: center;
-    font-family: var(--font-family);
-    background-color: var(--bg-body);
-}
-
-.calendar {
-    height: max-content;
-    width: max-content;
-    background-color: var(--bg-main);
-    border-radius: 30px;
-    padding: 20px;
+#modul-container {
     position: relative;
-    overflow: hidden;
+    background-color: #eee;
+    width: 700px;
+    height: 350px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.light .calendar {
-    box-shadow: var(--shadow);
+#footer-container {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
+}
+
+#save-button {
+    position: absolute;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.p-title {
+    margin-top: 2px;
+    margin-left: 5px;
+}
+
+
+/* TIME PICKER STYLES */
+
+#time-picker {
+    overflow: auto;
+    height: 250px;
+    width: 130px;
+}
+
+.time-picker-button {
+    width: 100%;
+    margin-bottom: 2px;
+}
+
+.selected-time {
+    background-color: red;
+}
+
+/* CALENDAR STYLES */
+
+.date-picker {
+    display: inline-block;
+    position: relative;
+}
+
+#calendar {
+    max-width: 300px;
+    font-family: Arial, sans-serif;
+    border: 1px solid #ccc;
+    padding: 10px;
 }
 
 .calendar-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 25px;
-    font-weight: 600;
-    color: var(--color-txt);
-    padding: 10px;
+    text-align: center;
+    font-weight: bold;
+    margin-bottom: 10px;
 }
-
-.calendar-body {
-    padding: 10px;
-}
-
-.calendar-week-day {
-    height: 50px;
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    font-weight: 600;
-}
-
-    .calendar-week-day div {
-        display: grid;
-        place-items: center;
-        color: var(--bg-second);
-    }
 
 .calendar-days {
+    display: flex;
+}
+
+.day {
+    flex: 1;
+    text-align: center;
+    padding: 5px;
+    font-weight: bold;
+}
+
+.calendar-dates {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
-    gap: 2px;
-    color: var(--color-txt);
+    grid-gap: 5px;
 }
 
-    .calendar-days div {
-        width: 50px;
-        height: 50px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 5px;
-        position: relative;
-        cursor: pointer;
-        animation: to-top 1s forwards;
-    }
-
-        .calendar-days div span {
-            position: absolute;
-        }
-
-        .calendar-days div:hover span {
-            transition: width 0.2s ease-in-out, height 0.2s ease-in-out;
-        }
-
-        .calendar-days div span:nth-child(1),
-        .calendar-days div span:nth-child(3) {
-            width: 2px;
-            height: 0;
-            background-color: var(--color-txt);
-        }
-
-        .calendar-days div:hover span:nth-child(1),
-        .calendar-days div:hover span:nth-child(3) {
-            height: 100%;
-        }
-
-        .calendar-days div span:nth-child(1) {
-            bottom: 0;
-            left: 0;
-        }
-
-        .calendar-days div span:nth-child(3) {
-            top: 0;
-            right: 0;
-        }
-
-        .calendar-days div span:nth-child(2),
-        .calendar-days div span:nth-child(4) {
-            width: 0;
-            height: 2px;
-            background-color: var(--color-txt);
-        }
-
-        .calendar-days div:hover span:nth-child(2),
-        .calendar-days div:hover span:nth-child(4) {
-            width: 100%;
-        }
-
-        .calendar-days div span:nth-child(2) {
-            top: 0;
-            left: 0;
-        }
-
-        .calendar-days div span:nth-child(4) {
-            bottom: 0;
-            right: 0;
-        }
-
-        .calendar-days div:hover span:nth-child(2) {
-            transition-delay: 0.2s;
-        }
-
-        .calendar-days div:hover span:nth-child(3) {
-            transition-delay: 0.4s;
-        }
-
-        .calendar-days div:hover span:nth-child(4) {
-            transition-delay: 0.6s;
-        }
-
-        .calendar-days div.curr-date,
-        .calendar-days div.curr-date:hover {
-            background-color: var(--blue);
-            color: var(--white);
-            border-radius: 50%;
-        }
-
-            .calendar-days div.curr-date span {
-                display: none;
-            }
-
-.month-picker {
-    padding: 5px 10px;
-    border-radius: 10px;
+.date {
+    text-align: center;
+    padding: 5px;
     cursor: pointer;
 }
 
-    .month-picker:hover {
-        background-color: var(--color-hover);
+    .date:hover {
+        color: #D6B1A1;
     }
 
-.year-picker {
-    display: flex;
-    align-items: center;
-}
-
-.year-change {
-    height: 40px;
-    width: 40px;
-    border-radius: 50%;
-    display: grid;
-    place-items: center;
-    margin: 0 10px;
-    cursor: pointer;
-}
-
-    .year-change:hover {
-        background-color: var(--color-hover);
+    .date.past:hover {
+        color: #aaa;
     }
 
-.calendar-footer {
-    padding: 10px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
+.disabled {
+    color: #ccc;
+    cursor: not-allowed;
 }
 
-.toggle {
-    display: flex;
+.past {
+    color: #aaa;
+    cursor: not-allowed;
 }
 
-    .toggle span {
-        margin-right: 10px;
-        color: var(--color-txt);
-    }
-
-.month-list {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background-color: var(--bg-main);
-    padding: 20px;
-    grid-template-columns: repeat(3, auto);
-    gap: 5px;
-    display: grid;
-    transform: scale(1.5);
-    visibility: hidden;
-    pointer-events: none;
+.selected-day {
+    background-color: red;
 }
-
-    .month-list.show {
-        transform: scale(1);
-        visibility: visible;
-        pointer-events: visible;
-        transition: all 0.2s ease-in-out;
-    }
-
-    .month-list > div {
-        display: grid;
-        place-items: center;
-    }
-
-        .month-list > div > div {
-            width: 100%;
-            padding: 5px 20px;
-            border-radius: 10px;
-            text-align: center;
-            cursor: pointer;
-            color: var(--color-txt);
-        }
-
-            .month-list > div > div:hover {
-                background-color: var(--color-hover);
-            }
